# Verbuno

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONTRIBUTORS.md  README.de.md  README.md  README.ru.md  README.uk.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
data/: io.github.trendorin.TranslUnix.desktop  io.github.trendorin.TranslUnix.metainfo.xml  io.github.trendorin.Verbuno.desktop  io.github.trendorin.Verbuno.metainfo.xml
docs/: ARCHITECTURE.md  PRIVACY.md  PROJECT_STATE.md  SECURITY_MODEL.md
packaging/arch/: PKGBUILD.in
packaging/debian/: copyright
packaging/fedora/: translunix.spec  verbuno.spec
packaging/scripts/: generate-sbom.sh
resources/: translunix.qrc  verbuno.qrc
src/app/: SingleInstance.cpp  SingleInstance.h  TrayController.cpp  TrayController.h  main.cpp
src/core/: AppSettings.cpp  AppSettings.h  EndpointValidator.cpp  EndpointValidator.h  HistoryStore.cpp  HistoryStore.h  InterfaceLanguageManager.cpp  InterfaceLanguageManager.h  LanguageCatalog.cpp  LanguageCatalog.h  PhotoOcrEngine.cpp  PhotoOcrEngine.h  PromptBuilder.cpp  PromptBuilder.h  ProviderClient.cpp  ProviderClient.h  SecretStore.cpp  SecretStore.h  SseDecoder.cpp  SseDecoder.h  TranslationController.cpp  TranslationController.h  TranslationTypes.h
src/ui/: AboutDialog.cpp  AboutDialog.h  HistoryPage.cpp  HistoryPage.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  TranslationPanel.cpp  TranslationPanel.h  TranslatorPopup.cpp  TranslatorPopup.h
tests/: CMakeLists.txt  CoreTests.cpp
translations/: translunix_de.ts  translunix_ru.ts  translunix_uk.ts  verbuno_de.ts  verbuno_ru.ts  verbuno_uk.ts
